# camerafy

./: EULA.txt  Highlevel-View.pptx
backend/: .gitignore  requirements.txt  run_local.bat
backend/main/: settings.py  urls.py
backend/sessions/: admin.py  apps.py  models.py  serializers.py  services.py  tests_models.py  urls.py  views.py
backend/sessions/migrations/: 0001_initial.py
frontend/: .env.development  README.md  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: api.ts  backend.ts
frontend/src/router/: index.ts
frontend/src/views/: CamerafySessions.vue  CamerafyStream.vue  Error.vue  NoPermission.vue
unity/: .gitignore  README.txt  packages.config
unity/Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
unity/Assets/Environments/: test.unity
unity/Assets/Materials/: Black.mat  White.mat  YUV.mat
unity/Assets/Models/: Model1.prefab  Model2.prefab  Model3.prefab
unity/Assets/Prefabs/: Application.prefab  (+1 more)
unity/Config/: AppConfig1.json  DefaultUserCameraSettings.json  broker.xml  log4net.config
unity/ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  ProjectSettings.asset  TagManager.asset
unity/Scripts/: Create_SSL_Certificate.bat  create_broker.bat  start_broker.bat
unity/WebApplication/: .gitignore  install_requirements.bat  requirements.txt  run_backend.bat  run_frontend.bat  run_webapp.ps1
unity/native_webrtc_plugin_code/CamerafyUnityPlugin/: BUILD.gn  Conductor.cc  Conductor.h  DEPS  unity_plugin_apis.cc  unity_plugin_apis.h
unity/native_webrtc_plugin_code/CamerafyUnityPlugin/RenderAPI/: RenderAPI.cpp  RenderAPI.h
unity/native_webrtc_plugin_code/CamerafyUnityPlugin/RenderAPI/D3D11/: D3D11RenderAPI.cpp  IUnityGraphicsD3D11.h
unity/native_webrtc_plugin_code/CamerafyUnityPlugin/Unity/: IUnityGraphics.h  IUnityInterface.h
(+187 files in other folders)
